Update method for run JasperReports class.